# GenerativeAIArtWeb

./: .coverage  .gitignore  README.md  mypy.ini  pyproject.toml  pyproject.toml.bak  pytest.ini  reorganize_tests.sh  requirements.txt  test_reorganization.py
Docs/: APP_FLOW.md  ARCHITECTURE.md  CODE_GUIDELINE  CODE_GUIDELINE.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  PRD.md
src/config/: file_manager_config.py
src/generator/: sd3_impls.py  sd3_inf.py
src/models/: __init__.py  base.py  file_manager.py  settings.py  web.py
src/prompt/: elements.json  json_builder.py  llm_generator.py
src/utils/: file_manager.py  settings.py  upscaler.py  watermark.py
src/web/: app.py  demo.py
test/: conftest.py
test/generator/: test_dit_embedder.py  test_mmditx.py  test_other_impls.py  test_sd3_impls.py  test_sd3_inf.py  test_sd3_integration.py
test/prompt/: test_json_builder.py  test_llm_generator.py
test/utils/: test_file_manager.py  test_settings.py  test_upscaler.py  test_watermark.py
test/web/: __init__.py  test_app.py  test_routes.py
tests/: conftest.py
tests/generator/: test_sd3_inf.py
tests/prompt/: test_json_builder.py  test_llm_generator.py
tests/utils/: test_file_manager.py  test_settings.py  test_upscaler.py  test_watermark.py
