[project]
name = "generativeaiartweb"
version = "0.1.0"
description = "Stable Diffusion 3.5モデルを利用した画像生成Webアプリケーション"
authors = [
    {name = "Kai Kogure", email = "weizard@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "fire (>=0.7.0,<0.8.0)",
    "pillow (>=8.0.0,<11.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "protobuf (>=5.29.3,<6.0.0)",
    "webdataset (>=0.2.111,<0.3.0)",
    "safetensors (>=0.5.3,<0.6.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "gradio (>=4.31.0,<5.0.0)",
    "flask (>=3.0.0,<4.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "pyyaml (>=6.0.1,<7.0.0)",
    "opencv-python (>=4.10.0,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "ollama (>=0.1.5,<0.2.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.extras]
cuda = ["torch", "torchvision"]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[tool.poetry]
packages = [
    {include = "src"}
]

